# SyncTalk_GS

./: .gitignore  README.md  RECORDING_GUIDE.md  load_config.py  pyproject.toml  requirements.txt  script_read.txt  streaming_inference.py
config/: inference_config.yaml
data_utils/: process.py
data_utils/face_parsing/: segformer.py
livekit/: MIGRATION_NOTES.md  README.md  livekit_server.sh
livekit/client/: simple_client.html  token_server.py
livekit/docs/: LIVEKIT_INTEGRATION_GUIDE.md  LIVEKIT_SETUP_COMPLETE.md
livekit/server/: agent_worker.py  avatar_worker.py  ditto_video_generator.py  synctalk_video_generator.py
