[project]
name = "synctalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "configargparse>=1.7.1",
    "dearpygui>=2.1.1",
    "einops>=0.8.1",
    "face-alignment>=1.4.1",
    "freqencoder",
    "fvcore>=0.1.5.post20221221",
    "imageio-ffmpeg>=0.6.0",
    "iopath>=0.1.10",
    "librosa>=0.11.0",
    "lpips>=0.1.4",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.31",
    "ninja>=1.13.0",
    "numba>=0.63.1",
    "numpy>=2.2.6",
    "onnxruntime-gpu>=1.23.2",
    "opencv-python>=4.12.0.88",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pyaudio>=0.2.14",
    "pymcubes>=0.1.6",
    "python-speech-features>=0.6",
    "pytorch3d",
    "resampy>=0.4.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "tensorboardx>=2.6.4",
    "torch>=2.9.1",
    "torch-ema>=0.3",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "trimesh>=4.11.0",
    "shencoder",
    "gridencoder",
    "raymarching-face"
]
[tool.uv]
no-build-isolation-package = ["freqencoder", "pytorch3d", "shencoder", "gridencoder", "raymarching-face"] 

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d.git" }
freqencoder = { path = "./freqencoder" }
shencoder = { path = "./shencoder" }
gridencoder = { path = "./gridencoder" }
raymarching-face = { path = "./raymarching" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = []
